Refactoring the start page.
There is now one form on the page instead of several. I manipulated
the validation functions to match.

Buttons are now outside of the accordion. There is a new config
button, but as yet the actions aren't different.

The accordion activates whichever form was being displayed; autoheight
is off to take into account the entrez search which may return a
bunch.

--- a/spatweb/spatweb/static/css/style.css
+++ b/spatweb/spatweb/static/css/style.css
@@ -13,7 +13,7 @@ text-decoration:none;
 }
 
 a:link,a:visited {
-color:#0021a5;
+   color:#0021a5 !important;
 }
 
 a:hover,a:active {
@@ -322,7 +322,7 @@ textarea { width: 100%; }
 
 .helptext {font-size: 0.8em; float:right; }
 
-#content label { float:left; text-align: right; clear:left; }
+
 #content input, #content select { margin-left: 6px; float:left; }
 
 li.error, ul.errorlist li { color:red; }
