Adding some tooltips to the buttons on the start page.

--- a/spatweb/spatweb/templates/start.html
+++ b/spatweb/spatweb/templates/start.html
@@ -45,8 +45,14 @@
       </div>
       {% endfor %}
     </div>
-    <button class="Start" type="submit" name="action" value="start">Start Analysis!</button>
-    <button class="Start" type="submit" name="action" value="config">Configure Analysis!</button>
+    <button class="Start" type="submit" name="action" value="start" 
+            title="Get the analysis results based on default configuration.">
+      Get Analysis!
+    </button>
+    <button class="Start" type="submit" name="action" value="config" 
+            title="Configure the analysis before running.">
+      Configure Analysis!
+    </button>
   </form>
   <br/>
   <p>
