Start page buttons for Go/Configure now work.
 * Entrez results carry the action of which button initiated the
   search when you click-to-select a search result.
 * renamed the run entry point and template to config to better match
   what's going on in there.
 * moved the actual running of the code into a separate request that
   can be called from a number of places.
 * Use the ConfigForm as a querystring parser. This is important since
   we are executing pynpact based on querystring values that we expect
   to already be filtered.
 * raw url entry-point is always present so we can use it for reverse,
   filter on the settings.DEBUG flag in a wrapper func.

--- a/spatweb/spatweb/templates/results.html
+++ b/spatweb/spatweb/templates/results.html
@@ -18,7 +18,7 @@
   {% if download_link %}
   <h3>Download</h3>
   <p>
-  You're download should start shortly.
+  Your download should start shortly.
   If you're impatient here is <a id="downloadlink" href="{{ download_link}}">the direct link</a>.
   </p>
   {% endif %}
@@ -26,7 +26,7 @@
   <h3>Not what you expected?</h3>
   <ul>
     {% if return_url %}
-    <li><a href="{{ return_url }}">Return to the previous page</a> and adjust the options</li>
+    <li><a href="{{ return_url }}">Reconfigure it</a> and try again.</li>
     {% endif %}
     <li><a href="{% url start %}">Start Over</a></li>
   </ul>
