--- a/spatweb/spatweb/templates/config.html
+++ b/spatweb/spatweb/templates/config.html
@@ -43,7 +43,7 @@
     <table>
     {{ form.as_table }}
     </table>
-    <p><button>Get Analysis!</button></p>
+    <p><button type="submit">Get Analysis!</button></p>
   </form>
 </div>
 {%endblock content %}
