--- a/spatweb/spatweb/templates/start.html
+++ b/spatweb/spatweb/templates/start.html
@@ -45,7 +45,7 @@
       </div>
       {% endfor %}
     </div>
-    <button class="Start" type="submit" name="action" value="start" 
+    <button class="Start" type="submit" name="action" value="run" 
             title="Get the analysis results based on default configuration.">
       Get Analysis!
     </button>
