--- a/spatweb/spatweb/templates/start/EntrezSearchForm.html
+++ b/spatweb/spatweb/templates/start/EntrezSearchForm.html
@@ -13,7 +13,7 @@
     {% for summary in form.session.summarize %}
     <tr>
       <td>
-        <a href="{% url efetch summary.Id %}?entrez_search_term={{entrez_search_term}}"> 
+        <a href="{% url efetch summary.Id %}?entrez_search_term={{entrez_search_term}}&action={{action}}">
           {{summary.Title}}
         </a>
       </td>
