Edited text in results.html

--- a/spatweb/spatweb/templates/results.html
+++ b/spatweb/spatweb/templates/results.html
@@ -1,5 +1,5 @@
 {%extends "base.html" %}
-{%block title %}S-P.A.T. Results{%endblock %}
+{%block title %}N-PACT Results{%endblock %}
 
 {%block addScript %}
 {% if download_link %}
@@ -19,7 +19,7 @@
   <h3>Download</h3>
   <p>
   Your download should start shortly.
-  If you're impatient here is <a id="downloadlink" href="{{ download_link}}">the direct link</a>.
+  Here is <a id="downloadlink" href="{{ download_link}}">the direct link</a>.
   </p>
   {% endif %}
 
