--- a/spatweb/spatweb/templates/start.html
+++ b/spatweb/spatweb/templates/start.html
@@ -51,7 +51,7 @@
     </button>
     <button class="Start" type="submit" name="action" value="config" 
             title="Configure the analysis before running.">
-      Configure Analysis!
+      Configure Analysis
     </button>
   </form>
   <br/>
