Modified text in start.html

--- a/spatweb/spatweb/templates/start.html
+++ b/spatweb/spatweb/templates/start.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load media %}
-{% block title %}N-PACT - N-Profile Analysis Computational Tool{% endblock %}
+{% block title %}NPACT - N-Profile Analysis Computational Tool{% endblock %}
 
 {% block addScript %}
 {% include_media 'jquery.js' %}
@@ -19,10 +19,10 @@
 
 {%block content %}
 <div class="contentPadding">
-  <h2>Run the N-Profile Analysis Computational Tool</h2>
-  <p>From here you can run a N-Profile analysis. The process starts with a Genbank file (see a <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">sample record</a>).</p>
+  <h2>N-PACT - N-Profile Analysis Computational Tool</h2>
+  <p>Run NPACT for frame-analysis and gene prediction from a sequence file in the Genbank format (see a <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">sample record</a> or the <a href="/spat/about">About</a> page).</p>
 
-  <p>NPACT can process uploaded files, files fetched from a url, or
+  <p>The NPACT server can process uploaded files, files fetched from a url, or
     genbank data pasted directly in. Only one of the  following is neccessary</p>
 
 
