Modified more text in start.html

--- a/spatweb/spatweb/templates/start.html
+++ b/spatweb/spatweb/templates/start.html
@@ -47,7 +47,7 @@
     </div>
     <button class="Start" type="submit" name="action" value="run" 
             title="Get the analysis results based on default configuration.">
-      Get Analysis!
+      Start Analysis!
     </button>
     <button class="Start" type="submit" name="action" value="config" 
             title="Configure the analysis before running.">
