A bunch of refactoring towards making the process smoother
 * config is getting passed around more correctly
 * error reporting is a little bit further in there
 * some styling on the processing page.

--- a/spatweb/spatweb/templates/about.html
+++ b/spatweb/spatweb/templates/about.html
@@ -4,6 +4,7 @@
 
 {%block content %}
 <div class="contentPadding">
+<h2 id="secHeader" title="N-PACT - About"><span><!--header image here--></span>N-PACT About</h2>
 <p>You reached a version under development of N-PACT, a program designed to identify protein-coding regions by frame analysis (Bibb et al, 1984), on a genomic scale. N-PACT produces a multi-page graphical representation of frame-specific compositional properties of the sequence (frame analysis), together with representation of coding regions annotated in the input sequence file. It also performs quantitative frame analysis on the sequence, identifying sequence regions of significant compositional contrasts and corresponding gene predictions (<a href="">Oden and Brocchieri 2012</a>). </p>
 
 <p>The N-PACT server produces a (multi-page) PostScript file for frame analysis (<a href="http://www.sciencedirect.com/science/article/pii/0378111984901161">Bibb et al. 1984</a>) representing profiles of GC content in three frames (<a href="http://www.bioinformatika.pbf.hr/Articles/FramePlot.pdf">Ishikawa and Hotta 1999</a>; <a href="http://www.ncbi.nlm.nih.gov/pubmed/15919911">Brocchieri et al. 2005</a>), published gene annotation when available, high-scoring segments and new gene predictions.</p>
