--- a/spatweb/spatweb/templates/index.html
+++ b/spatweb/spatweb/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}N-PACT - N-Profile Analysis Computational Tool{% endblock %}
 
 {%block content %}
-<h2 id="secHeader" title="N-PACT - N-Profile Analysis Computational Tool Home"><span></span>N-Profile Analysis Computational Tool Home</h2>
+<h2 id="secHeader" title="N-PACT - N-Profile Analysis Computational Tool Home"><span><!--header image--></span>N-Profile Analysis Computational Tool Home</h2>
 				<h3>About the N-Profile Analysis Computational Tool</h3>
 
 <div class="contentPadding">
