--- a/spatweb/spatweb/templates/processing.html
+++ b/spatweb/spatweb/templates/processing.html
@@ -7,23 +7,24 @@
 {% endblock addScript %}
 
 {% block content %}
-<h2 id="secHeader" title="N-PACT - N-Profile Analysis Computational Tool Home"><span></span>N-Profile Analysis Computational Tool Home</h2>
-				<h3>About the N-Profile Analysis Computational Tool</h3>
+<h2>N-PACT is Running</h2>
+<h3>Status</h3>
 
 <div class="contentPadding">
-The computation is currently running.
-<div class="progress">
-  <div class="timer"></div>
-  <div class="text"> - Current Progress - 
-    <ul id="steps">
-    </ul>
+  <span id="computationrunning">The computation is currently running.</span>
+  <div id="progressreport">
+    <div class="timer"></div>
+    <div class="text"> 
+      <h4>Current Progress</h4>
+      <ul id="steps">
+      </ul>
+    </div>
   </div>
-</div>
 <script type="text/javascript">
   var progress ={
      url:"{{ path }}",
-     dom: jQuery('.progress'),
-     timerDom: jQuery('.progress .timer'),
+     dom: jQuery('#progressreport'),
+     timerDom: jQuery('#progressreport .timer'),
      steps: jQuery('#steps'),
      start: null,
      updateTimer :function (){
@@ -56,7 +57,11 @@ The computation is currently running.
      }
   }
   function onerror(data){
-     window.location = "{% url start %}";
+     $('#computationrunning').remove()
+     window.clearInterval(progress.interval);
+     progress.timerDom.html('There was an error. You can click refresh to try again or return to the <a href="{% url start %}">start</a>.')
+     //window.location = "{% url start %}";
+
   }
   function runRequest(){
      console.log('Starting Progress Request Chain');
