Putting more emphasis on the processing page rather than results.
The idea is that since a lot of the information we want to display
already has a start on the processing page: use it instead of
redirecting away.

I have that all lined up, the next step is to make the softtimeout
report steps always, and include links to the files with that.

re #622 (1), #615 (0.5), #623 (0.5)

--- a/spatweb/spatweb/static/css/style.css
+++ b/spatweb/spatweb/static/css/style.css
@@ -325,7 +325,7 @@ textarea { width: 100%; }
 
 #content input, #content select { margin-left: 6px; float:left; }
 
-li.error, ul.errorlist li { color:red; }
+.error, ul.errorlist li { color:red; }
 
 ul.messages { border: 1px dotted #444; } 
 
