--- a/spatweb/spatweb/static/qtip2/jquery.qtip.css
+++ b/spatweb/spatweb/static/qtip2/jquery.qtip.css
@@ -9,7 +9,7 @@
 *   http://en.wikipedia.org/wiki/MIT_License
 *   http://en.wikipedia.org/wiki/GNU_General_Public_License
 *
-* Date: Sun Oct  2 09:21:22.0000000000 2011
+* Date: Sun Feb 26 18:17:58.0000000000 2012
 */
 
 /* Core qTip styles */
@@ -24,8 +24,6 @@
 	
 	font-size: 10.5px;
 	line-height: 12px;
-
-	z-index: 15000;
 }
 
 	/* Fluid class for determining actual width in IE */
@@ -40,10 +38,9 @@
 		position: relative;
 		padding: 5px 9px;
 		overflow: hidden;
-		
-		border-width: 1px;
-		border-style: solid;
-		
+
+		border: 1px solid #000001;
+
 		text-align: left;
 		word-wrap: break-word;
 		overflow: hidden;
@@ -54,9 +51,9 @@
 		min-height: 14px;
 		padding: 5px 35px 5px 10px;
 		overflow: hidden;
-		
+
+		border: 1px solid #000001;
 		border-width: 1px 1px 0;
-		border-style: solid;
 
 		font-weight: bold;
 	}
@@ -137,6 +134,28 @@
 		border-color: #AAA;
 		color: #111;
 	}
+
+/* Tips plugin */
+.ui-tooltip .ui-tooltip-tip{
+	margin: 0 auto;
+	overflow: hidden;
+	z-index: 10;
+}
+
+	.ui-tooltip .ui-tooltip-tip,
+	.ui-tooltip .ui-tooltip-tip *{
+		position: absolute;
+		
+		line-height: 0.1px !important;
+		font-size: 0.1px !important;
+		color: #123456;
+
+		background: transparent;
+		border: 0px dashed transparent;
+	}
+	
+	.ui-tooltip .ui-tooltip-tip canvas{ top: 0; left: 0; }
+
 
 /*! Light tooltip style */
 .ui-tooltip-light .ui-tooltip-titlebar,
@@ -512,3 +531,4 @@
 	filter: none;
 	-ms-filter: none;
 }
+
