--- a/spatweb/spatweb/templates/config.html
+++ b/spatweb/spatweb/templates/config.html
@@ -5,7 +5,6 @@
 {% block addScript %}
 {% include_media 'jquery.js' %}
 <script type="text/javascript">
-
   $(function(){
     $('button').button()
     $("tbody input + br").remove();
@@ -17,8 +16,17 @@
           hide: { event: 'unfocus' }
 
        });
-
     });
+    // Setup the significance trigger 
+    $('#id_run_prediction')
+     .change(function (event) {
+               var checked = $(this).is(':checked');
+               console.log('run prediction box clicked.', checked);
+               if(checked)
+                 $('#id_significance').removeAttr('disabled');
+               else 
+                 $('#id_significance').attr('disabled','true');
+              });
   });
 </script>
 {% endblock %}
