Adding nucleotide options to the config, threading that to nprofile.

--- a/spatweb/spatweb/templates/config.html
+++ b/spatweb/spatweb/templates/config.html
@@ -29,6 +29,10 @@
               });
   });
 </script>
+<style>
+  #content ul li { display: inline; margin: 0 8px; }
+  #content ul { list-style-type: none; margin:4px 0;}
+</style>
 {% endblock %}
 
 {%block content %}
