Invert the sense of run_prediction to skip_prediction
Due to vagaries of HTML forms unchecked checkboxes aren't submitted so
it is somewhat tricky to detect when it is unchecked.

By reversing the config option we ensure that the default (to run the
prediction) doesn't require a key in the url/posts whereas if it is
switched away (skip_prediction) then that key will always be present.

--- a/spatweb/spatweb/templates/config.html
+++ b/spatweb/spatweb/templates/config.html
@@ -18,14 +18,14 @@
        });
     });
     // Setup the significance trigger 
-    $('#id_run_prediction')
+    $('#id_skip_prediction')
      .change(function (event) {
                var checked = $(this).is(':checked');
-               console.log('run prediction box clicked.', checked);
+               console.log('skip prediction box clicked.', checked);
                if(checked)
-                 $('#id_significance').removeAttr('disabled');
-               else 
                  $('#id_significance').attr('disabled','true');
+               else 
+                 $('#id_significance').removeAttr('disabled');
               });
   });
 </script>
