--- a/spatweb/spatweb/templates/processing.html
+++ b/spatweb/spatweb/templates/processing.html
@@ -32,7 +32,7 @@
       </div>
       <h4>Not what you expected?</h4>
       <ul>
-        <li><a id="reconfigurelink" href="#">Reconfigure it</a> and try again.</li>
+        <li><a id="reconfigurelink" href="{{ reconfigure_url }}">Reconfigure it</a> and try again.</li>
         <li><a href="{% url start %}">Start Over</a></li>
       </ul>
     </div>
@@ -45,7 +45,9 @@
     <div id="computationerred" class="ui-state-error ui-corner-all" style="display:none">
       <p>
         <span style="" class="ui-icon ui-icon-alert"></span>
-        There was an error. You can click refresh to try again or return to the <a href="{% url start %}">start</a>.
+        There was an error. You can click refresh to try again,
+        <a href="{{ reconfigure_url }}">reconfigure this report</a>, 
+        or return to the <a href="{% url start %}">start</a>.
       </p>
     </div>
 
