--- a/spatweb/spatweb/templates/start.html
+++ b/spatweb/spatweb/templates/start.html
@@ -20,7 +20,7 @@
 {%block content %}
 <div class="contentPadding">
   <h2>NPACT - N-Profile Analysis Computational Tool</h2>
-  <p>You reached a version under development of N-PACT. File upload and "Start Analysis!" should be fully functional and result in a PostScript file and in a list of text file. Please bear with us as we improve the progress-reporting output. The "Configure Analysis" page is currently only partially functional and being progressively developed. </p>
+  <p>N-PACT is now in advanced stage of development. File upload and "Start Analysis!" will produce a graphical output showing sequence compositional contrasts (as in frame analysis), regions of non-random compositional contrasts, and gene predictions, plus the correspoding text files. The "Configure Analysis" page is currently unstable as its functionality is progressively being developed. </p>
   <p>Run NPACT for frame-analysis and gene prediction from a sequence file in the Genbank format (see a <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">sample record</a> or the <a href="/spat/about">About</a> page).</p>
 
   <p>The NPACT server can process uploaded files, files fetched from a url, or
