Don't autodownload the file; reword text to make this apparent.

--- a/spatweb/spatweb/templates/processing.html
+++ b/spatweb/spatweb/templates/processing.html
@@ -20,8 +20,7 @@
       <div class="ui-state-highlight">
         <div class="ui-icon ui-icon-info" style="float:left;" ></div>
         <p>
-          Your download should start shortly. 
-          If it does not, here is <a id="downloadlink" href="#">the direct link</a>.
+          The analysis is now ready <a id="downloadlink" href="#">Click Here</a> to view.
         </p>
       </div>
       <h4>Not what you expected?</h4>
