--- a/spatweb/spatweb/static/css/style.css
+++ b/spatweb/spatweb/static/css/style.css
@@ -336,8 +336,9 @@ button.Start { clear:both; margin: 8px;}
 
 /* ****** For the processing page ****** */
 #progress .ready { display:none; }
-#progress span.ui-icon { float:left; margin-right: .3em;}
+#progress span.ui-icon { float:left; margin-right: .5em;}
 #progress h3 + div { padding-left: 16px; }
+#progress h4 { margin-top: 6px; }
 
 #timer { margin: 10px 0; }
 #steps { max-height: 200px; overflow:auto; }
