Use a little spinner image instead of the countup timer.

--- a/spatweb/spatweb/templates/processing.html
+++ b/spatweb/spatweb/templates/processing.html
@@ -45,11 +45,8 @@
     </div>
 
     <div id="computationrunning" class="ui-state-highlight">
-      <div class="ui-icon ui-icon-info" style="float:left;" ></div>
+      <img src="{% media_url "images/spinner.gif" %}" class="spinner"/>
       <p>The computation is currently running.</p>
-    </div>
-    <div id="timer" style="display:none" class="ui-state-highlight">
-      Time Running: <span></span>
     </div>
     
     <div> 
