--- a/spatweb/spatweb/templates/processing.html
+++ b/spatweb/spatweb/templates/processing.html
@@ -13,16 +13,26 @@
 
 <div id="progress" class="contentPadding">
 
-  <div id="results" style="display:none">
-    <h3><span class="ui-icon ui-icon-triangle-1-e">Collapse</span> Results </h3>
-    <div style="display:none">
-      <h4>Download</h4>
-      <div class="ui-state-highlight">
+  <div id="results" >
+    <h3>Results </h3>
+    <div>
+
+      <h4>Downloads</h4>
+
+      <div id="graphicalresults" style="display:none;" class="ui-state-highlight">
         <div class="ui-icon ui-icon-info" style="float:left;" ></div>
         <p>
-          The analysis is now ready <a id="downloadlink" href="#">Click Here</a> to view.
+          The graph is now ready <a id="downloadlink" href="#">Click Here</a> to view.
         </p>
       </div>
+      <div id="predictionresults" style="display:none;" class="ui-state-highlight">
+        <div class="ui-icon ui-icon-info" style="float:left;" ></div>
+        <p>
+          The prediction results are now ready:
+          <ul id="files" />
+        </p>
+      </div>
+
       <h4>Not what you expected?</h4>
       <ul>
         <li><a id="reconfigurelink" href="{{ reconfigure_url }}">Reconfigure it</a> and try again.</li>
@@ -32,9 +42,9 @@
   </div>
 
   
-  <h3 id="progressreport" >
-    <span class="ui-icon ui-icon-triangle-1-e ui-icon-triangle-1-s">Collapse</span> Status </h3>
-  <div>
+
+  <div id="progressreport">
+    <h3 > Status </h3>
     <div id="computationerred" class="ui-state-error ui-corner-all" style="display:none">
       <p>
         <span style="" class="ui-icon ui-icon-alert"></span>
@@ -47,15 +57,10 @@
     <div id="computationrunning" class="ui-state-highlight">
       <img src="{% media_url "images/spinner.gif" %}" class="spinner"/>
       <p>The computation is currently running.</p>
-    </div>
-    
-    <div> 
-      <h4>Intermediate results</h4>
-      <ul id="files"></ul>
-      <h4>Current Progress</h4>
-      <ul id="steps"></ul>
+      <p id="currentstep">Currently: <span id="currentstepdesc">Calculating next step</span></p>
     </div>
   </div>
+
   <script type="text/javascript">
     jQuery(document).ready( function(){ 
       progress.init("{{ path }}"); 
