Make results links open in a new window.

--- a/spatweb/spatweb/templates/processing.html
+++ b/spatweb/spatweb/templates/processing.html
@@ -22,7 +22,7 @@
       <div id="graphicalresults" style="display:none;" class="ui-state-highlight">
         <div class="ui-icon ui-icon-info" style="float:left;" ></div>
         <p>
-          The graph is now ready <a id="downloadlink" href="#">Click Here</a> to view.
+          The graph is now ready <a id="downloadlink" href="#" target="_blank">Click Here</a> to view.
         </p>
       </div>
       <div id="predictionresults" style="display:none;" class="ui-state-highlight">
