Modified text in about.html and start.html pages

--- a/spatweb/spatweb/templates/about.html
+++ b/spatweb/spatweb/templates/about.html
@@ -14,7 +14,7 @@
 
 <h4>N-profile and prediction graphical output</h4>
 <p>N-PACT produces a multi-page graphical ouput in Postscript or PDF format. This output contains the following information:</p>
-<p> Newly Annotated. These are coding regions newly predicted by the N-PACT procedure, represented by arrows pointing in the 5'-to-3' orientation. Newly predicted coding regions are in bold-face, whereas coding regions corresponding to published genes but with modified starting position are displayed in lighter color. The names of the coding regions are in the form: X-number[-/*]Y, where:</p>
+<p> Newly Annotated. These are coding regions newly predicted by the N-PACT procedure, represented by arrows pointing in the 5'-to-3' orientation. Newly predicted coding regions are in bold-face, whereas coding regions corresponding to published genes but with modified starting position are displayed in lighter color. The names of the coding regions are in the form: [H/G]-number[-/*][A/a/G/g/T/t/C/c/W/w], for example, H-2335*A, G-123-t, where:</p>
 <list>
 <p>	X identifies the type of hit and assumes values:</p>
 <p>		H: H-type hit, identified using a scoring scheme based on compositional expectations of coding regions.</p>
