--- a/spatweb/spatweb/templates/start.html
+++ b/spatweb/spatweb/templates/start.html
@@ -20,8 +20,8 @@
 {%block content %}
 <div class="contentPadding">
   <h2>NPACT - N-Profile Analysis Computational Tool</h2>
-  <p>N-PACT is now in advanced stage of development. File upload and "Start Analysis!" will produce a graphical output showing sequence compositional contrasts (as in frame analysis), regions of non-random compositional contrasts, and gene predictions, plus the correspoding text files. The "Configure Analysis" page is currently unstable as its functionality is progressively being developed. </p>
-  <p>Run NPACT for frame-analysis and gene prediction from a sequence file in the Genbank format (see a <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">sample record</a> or the <a href="/spat/about">About</a> page).</p>
+  <p>For frame-analysis and gene prediction from a sequence file in the Genbank format (see a <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">sample record</a> or the <a href="/spat/about">About</a> page).</p>
+  <p>After seleting a sequence file, "Start Analysis!" will result in a graphical output showing sequence compositional contrasts for frame analysis, gene annotation (when available), and, by default, regions of non-random compositional contrast (hits), gene predictions, and corresponding output text files. Parameters can be modified using "Configure Analysis", which leads to a page where the user can choose which nucleotide type(s) to represent for frame analysis, start and end position of the analysis, and level of significance of high scoring segments (hits). From this page the user can also disable identification of high-scoring segments and new gene predictions altogether, in which case N-PACT will only produce the graph of frame-specific nucleotide content and positions of genes annotated in the input file. </p>
 
   <p>The NPACT server can process uploaded files, files fetched from a url, or
     genbank data pasted directly in. Only one of the  following is neccessary</p>
