--- a/spatweb/spatweb/templates/processing.html
+++ b/spatweb/spatweb/templates/processing.html
@@ -56,7 +56,7 @@
 
     <div id="computationrunning" class="ui-state-highlight">
       <img src="{% media_url "images/spinner.gif" %}" class="spinner"/>
-      <p id="currentstep">N-PACT is: <span id="currentstepdesc">Parsing GBK file.</span></p>
+      <p id="currentstep">N-PACT is: <span id="currentstepdesc">Parsing GenBank file.</span></p>
     </div>
   </div>
 
