--- a/spatweb/spatweb/static/css/style.css
+++ b/spatweb/spatweb/static/css/style.css
@@ -36,7 +36,7 @@ overflow: hidden;
 }
 
 h1#dept a {
-   color: white;
+   color: white !important;
    line-height:160%;
    font-family: Century Gothic;
    font-size: larger;
