--- a/spatweb/spatweb/templates/base.html
+++ b/spatweb/spatweb/templates/base.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="header">
-      <h1 id="dept"><a href="/">N-Profile Analysis Computational Tool</a></h1>
+      <h1 id="dept"><a href="{% url start %}">N-Profile Analysis Computational Tool</a></h1>
       <h2 id="uf"><a href="http://www.ufl.edu/">University of Florida<span></span></a></h2>
     </div>
 
